<resources>
    <string name="app_name">SehatQ Test - Taufik Soleh</string>
    <string name="no_data">No Data</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_error">there is no such product name</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_recipes">Product</string>
    <string name="title_activity_product_details">product Details</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="test_password">ahmed</string>
    <string name="test_email">ahmed@ahmed.ahmed</string>
    <string name="title_login">SehatQ</string>
    <string name="text_forget_passwrod">Lupa password?</string>
    <string name="btn_login">Login</string>
    <string name="text_no_account">Don\'t have an account?</string>
    <string name="text_register">Sign up</string>
    <string name="btn_sign_in_with_google">Sign in with Google</string>
    <string name="btn_sign_in_with_fb">Sign In With Facebook</string>
    <string name="promt_username">Username</string>
    <string name="produt_name">Nama Produk</string>
    <string name="produt_description">Sekilas tentang produk</string>
    <string name="btn_buy">Buy</string>
    <string name="share">Bagikan</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="title_activity_purchase">Purchase History</string>
    <string name="product_price">$188</string>
    <string name="remember_me">Remember Me</string>
</resources>
